--- a/formularios/templates/formularios/index.html
+++ b/formularios/templates/formularios/index.html
@@ -17,7 +17,7 @@
         {{ form.as_p }}
         <button name="submit">Adicionar</button>
     </form>
-
+    {{frase}}
     {% endblock content %}
 </body>
 </html>
